# neo-market-MOD

./: .gitignore  Makefile  docker-compose.yaml
.github/workflows/: django.yml
Moderation/: Dockerfile  Makefile  README.md  pyproject.toml
Moderation/app/product_moderation/: apps.py  urls.py
Moderation/app/product_moderation/api/: __init__.py  b2b_client.py  exceptions.py  serializers.py
Moderation/app/product_moderation/migrations/: 0001_initial.py  0002_alter_productmoderation_queue_priority_and_more.py  0003_rename_moderated_status_to_approved.py  0004_field_report_contract_fields.py
Moderation/app/product_moderation/models/: __init__.py  product_blocking_reason.py  product_moderation.py  product_moderation_field_report.py
Moderation/app/product_moderation/services/: __init__.py  product_decisions.py
Moderation/app/product_moderation/views/: __init__.py  approve_product.py  auth.py  decline_product.py  product_events.py
Moderation/config/: settings.py  test_settings.py  urls.py
Moderation/tests/product_moderation/: conftest.py  test_approve_product.py  test_b2b_client.py  test_decline_product.py  test_hard_block.py  test_product_events.py
